# llmalpha

./: .gitignore  README.md  README_CN.md  pyproject.toml
configs/: default.yaml
data/: .gitkeep
llmalpha/: __init__.py  config.py
llmalpha/agent/: __init__.py  config.py  researcher.py
llmalpha/agent/core/: __init__.py  context.py  loop.py  validator.py
llmalpha/agent/generator/: __init__.py  base.py  factor_gen.py  signal_gen.py  strategy_gen.py
llmalpha/agent/prompts/: __init__.py  templates.py
llmalpha/agent/providers/: __init__.py  anthropic.py  base.py  deepseek.py  ollama.py  openai.py  qwen.py
llmalpha/agent/sandbox/: __init__.py  executor.py
llmalpha/agent/tools/: __init__.py  data_tool.py
llmalpha/agent/ui/: __init__.py  exploration.py
llmalpha/backtest/: __init__.py  result.py  vbt_engine.py
llmalpha/cli/: __init__.py  main.py
llmalpha/data/: __init__.py  downloader.py  loader.py
llmalpha/factors/: __init__.py  base.py  validator.py
llmalpha/knowledge/: __init__.py  models.py  repository.py  service.py
llmalpha/optimize/: __init__.py  optuna_optimizer.py  validator.py
llmalpha/research/: __init__.py  hypothesis.py
llmalpha/signals/: __init__.py  base.py  validator.py
llmalpha/strategies/: __init__.py  base.py
llmalpha/utils/: __init__.py
tests/: __init__.py  test_agent.py  test_backtest.py  test_strategies.py
